Moved header and footer to includes

--- a/cmms/templates/base.html
+++ b/cmms/templates/base.html
@@ -1,9 +1,7 @@
-<h1>This is Navbar</h1>
+{% include 'includes/header.html' %}
 
 {% block content %}
 
 {% endblock %}
 
-
-
-<h1>This is Footer</h1>
+{% include 'includes/footer.html' %}
