--- a/cmms/templates/webpages/login.html
+++ b/cmms/templates/webpages/login.html
@@ -1,14 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Django App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
+{% include 'includes/header.html' %}
 <body class="djl-body">
     <!-- Animated background -->
     <div class="djl-bg-animation">
@@ -94,7 +86,9 @@
             <p>Don't have an account? <a href="#" id="djlSignupLink">Sign up here</a></p>
         </div>
     </div>
+    
 <script src="{% static 'js/script.js' %}"></script>
 </body>
+
 </html>
 
